# generative-music-experiment

./: Cargo.toml  package-lock.json  package.json  webpack.config.js
.github/workflows/: publish.yml
src/: lib.rs  main.rs
