[package]
name = "generative-music-experiment"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
currawong = { version = "0.3", features = ["web"], default-features = false }
rand = "0.8"
anyhow = "1.0"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "CssStyleDeclaration",
]
